Contact list and Contact Data Model

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
             android:name=".MainActivity"
             android:exported="true">
         </activity>
+
+        <service android:name=".FetchDataService" />
     </application>
 
 </manifest>
