--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -18,11 +21,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pigeon"
         tools:targetApi="31">
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_emoji_button"/>
+        <meta-data android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@android:color/white"/>
+
         <activity
-            android:name=".activities.VideocallActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Login.LoginActivity"
+            android:name=".SplashScreen"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,14 +37,28 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activities.VideocallActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.LoginActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".UI.ChatScreen"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <service android:name=".FetchDataService" />
+        <service
+            android:name=".Utility.FCM"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
