--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pigeon"
         tools:targetApi="31">
-        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_emoji_button"/>
-        <meta-data android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@android:color/white"/>
-
         <activity
-            android:name=".SplashScreen"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:name=".Login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,28 +31,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.VideocallActivity"
+            android:name=".UI.ChatScreen"
             android:exported="false" />
         <activity
-            android:name=".Login.LoginActivity"
+            android:name=".MainActivity"
             android:exported="true">
         </activity>
-        <activity
-            android:name=".UI.ChatScreen"
-            android:exported="false"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
+        <activity android:name=".Profile"
+            android:exported="false"/>
 
-        <service android:name=".FetchDataService" />
-        <service
-            android:name=".Utility.FCM"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
     </application>
 
 </manifest>
